[tool.poetry]
name = "coursework-5"
version = "0.1.0"
description = ""
authors = ["Ekaterina Lyamina <kkatka@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
